--- a/package.json
+++ b/package.json
@@ -2,17 +2,52 @@
   "name": "proyecto",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "esbuild.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "build": "node esbuild",
+    "start": "node dist/index --trace-deprecation"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.21.4",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
+    "esbuild": "^0.13.3",
+    "esbuild-plugin-sass": "^0.6.0",
+    "express": "^4.17.1",
+    "history": "^5.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^5.2.1",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "@types/cookie-parser": "^1.4.2",
+    "@types/eslint": "^7.28.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-config": "^5.0.3",
+    "@types/react-router-dom": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "cypress": "^8.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "nodemon": "^2.0.13",
+    "typescript": "^4.4.3"
   }
 }
